--- a/styles.css
+++ b/styles.css
@@ -87,6 +87,7 @@ body {text-align: center;}
 /* Button */
 
 #submit {
+  cursor: pointer;
   margin: 0;
   padding: 0;
   border: 4px solid #476783;
@@ -102,6 +103,13 @@ body {text-align: center;}
   right: 0;
   bottom: 0;
   width: 140px;
+}
+
+#submit:active {
+  top: 4px;
+  padding-top: 4px;
+  box-shadow: inset 0 4px 0 #caba6a, inset 0 22px 0 #fde885;
+  border-top: none;
 }
 
 /* Translated Paragraph */
