--- a/styles.css
+++ b/styles.css
@@ -28,6 +28,8 @@ body {text-align: center;}
 
 /* Elements */
 
+a {text-decoration: none;}
+
 .logo {
   font-family: 'Bungee', sans-serif;
   color: white;
@@ -127,6 +129,36 @@ body {text-align: center;}
   border-radius: 4px;
   padding: 60px 30px;
 }
+
+/* Share Icons */
+
+.share-icon {
+  display: block;
+  cursor: pointer;
+  width: 68px;
+  height: 68px;
+  background-color: white;
+  border-radius: 50%;
+  padding: 4px;
+}
+
+.share-icon img {
+  display: block;
+  width: 100%;
+  cursor: pointer;
+}
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
