--- a/styles.css
+++ b/styles.css
@@ -239,7 +239,10 @@ footer {
     padding: 0 15px;
   }
 
-  .logo {margin: 30px 0 30px;}
+  .logo {
+    font-size: 1.7em;
+    margin: 25px 0 25px;
+  }
 
   .field {height: 92px;}
 
